# Resort-2

./: .gitignore  commits.txt  dbupdate.txt  lu.bat
ATS/: ATS.pro  dlgmain.cpp  dlgmain.h  dlgmain.ui  res.rc
Base/: appconfig.cpp  appconfig.h  base.cpp  base.h  basedialog.cpp  basedialog.h  baseorder.cpp  baseorder.h  baseuid.cpp  baseuid.h  command.cpp  command.h  database.cpp  database.h  databaseresult.cpp  databaseresult.h  defines.cpp  defines.h  defrest.cpp  defrest.h  defstore.h  demo.cpp  demo.h  doubledatabase.cpp  doubledatabase.h  logging.cpp  logging.h  paymentmode.cpp  paymentmode.h  preferences.cpp  preferences.h  user (1).cpp  user.cpp  user.h  utils.cpp  utils.h  vauchers.cpp  vauchers.h
Cache/: cacheactiveroom.cpp  cacheactiveroom.h  cachebase.cpp  cachebase.h  cachebed.cpp  cachebed.h  cachecar.cpp  cachecar.h  cachecardex.cpp  cachecardex.h  cachecardexgroup.cpp  cachecardexgroup.h  cachecashdesk.cpp  cachecashdesk.h  cachecashdoc.cpp  cachecashdoc.h  cachecheckoutinvoice.cpp  cachecheckoutinvoice.h  cachecityledger.cpp  cachecityledger.h  cachecladvance.cpp  cachecladvance.h  cachecouponseria.cpp  cachecouponseria.h  cachecoupontype.cpp  cachecoupontype.h  cachecreditcard.cpp  cachecreditcard.h  cachecurrencies.cpp  cachecurrencies.h  cachedebtcostumer.cpp  cachedebtcostumer.h  cachediscounttype.cpp  cachediscounttype.h  cachedish.cpp  cachedish.h  cachedishstate.cpp  cachedishstate.h  cachedocpayment.cpp  cachedocpayment.h  (+101 more)
Charts/: chsample.cpp  chsample.h  chsample.ui
Controls/: cacheforcombobox.cpp  cacheforcombobox.h  ecolorlineedit.cpp  ecolorlineedit.h  ecomboboxcompleter.cpp  ecomboboxcompleter.h  ecombomonth.cpp  ecombomonth.h  edateedit.cpp  edateedit.h  efilterlineedit.cpp  efilterlineedit.h  efilterlineedit.ui  epushbutton.cpp  epushbutton.h  eqcheckbox.cpp  eqcheckbox.h  eqcombobox.cpp  eqcombobox.h  eqdateedit.cpp  eqdateedit.h  eqdoubleedit.cpp  eqdoubleedit.h  eqlineedit (1).h  eqlineedit.cpp  eqlineedit.h  eqspinbox.cpp  eqspinbox.h  eqtablewidget.cpp  eqtablewidget.h  eqtextedit.cpp  eqtextedit.h  eqtimeedit.cpp  eqtimeedit.h  eradiobutton.cpp  eradiobutton.h  etoolbarbutton.cpp  etoolbarbutton.h  trackcontrol.cpp  trackcontrol.h
Filter/: faccmonthlyreport.cpp  faccmonthlyreport.h  faccmonthlyreport.ui  fallguestindaterange.cpp  fallguestindaterange.h  fallguestindaterange.ui  fasexportsale.cpp  fasexportsale.h  fasexportsale.ui  fattendance.cpp  fattendance.h  fattendance.ui  favailablerooms.cpp  favailablerooms.h  favailablerooms.ui  fbalanceoncard.cpp  fbalanceoncard.h  fbalanceoncard.ui  fbreakfast.cpp  fbreakfast.h  fbreakfast.ui  fcallhistory.cpp  fcallhistory.h  fcallhistory.ui  fcanceledreservations.cpp  fcanceledreservations.h  fcanceledreservations.ui  fcardexsales.cpp  fcardexsales.h  fcardexsales.ui  fcash.cpp  fcash.h  fcash.ui  fcashreport.cpp  fcashreport.h  fcashreport.ui  fcashreportsummary.cpp  fcashreportsummary.h  fcashreportsummary.ui  fcategorytosell.cpp  (+172 more)
GridOptionWidgets/: godaily.cpp  godaily.h  godaily.ui  gowidget.cpp  gowidget.h
Print/: dlgprintreservation.cpp  dlgprintreservation.h  dlgprintreservation.ui  pexportinvoicetoexcel.cpp  pexportinvoicetoexcel.h  pimage.cpp  pimage.h  pprintcheckin.cpp  pprintcheckin.h  pprintheader.cpp  pprintheader.h  pprintinvoice.cpp  pprintinvoice.h  pprintpreview.cpp  pprintpreview.h  pprintpreview.ui  pprintreceipt.cpp  pprintreceipt.h  pprintscene.h  pprintstoredoc.cpp  pprintstoredoc.h  pprintstoreentry.cpp  pprintstoreentry.h  pprintvaucher (1).cpp  pprintvaucher.cpp  pprintvaucher.h  printtax (1).cpp  printtax (1).h  printtax.cpp  printtax.h  printtax.ui  ptextrect.cpp  ptextrect.h
RGDoubleClick/: rgcityledgerdetailedbalance.cpp  rgcityledgerdetailedbalance.h  rgdoubleclickdelegate.cpp  rgdoubleclickdelegate.h
Resort/: CMakeLists.txt  ModelCreateHelper.xlsx  Resort.pro  Resort.pro.user.3cb35f3  Resort.pro.user.4d2ed68  Resort.pro.user.b56fefc  Resort.pro.user.fb4f21e  Resort.pro.user~RF3bb36ca.TMP  Resort.pro.user~RF940c49a.TMP  Resort.pro.user~RF943255d.TMP  Resort.pro.user~RFcd3c39d.TMP  Resort.pro~RF28e54ba.TMP  Resort.pro~RF290a3f9.TMP  Resort.qm  Resort.ts  about.cpp  about.h  about.ui  baseextendeddialog.cpp  baseextendeddialog.h  basewidget.cpp  basewidget.h  broadcastthread.cpp  broadcastthread.h  c5printing.cpp  c5printing.h  c5printpreview.cpp  c5printpreview.h  c5printpreview.ui  database2.cpp  database2.h  databaseconnection.cpp  databaseconnection.h  databaseconnection.ui  databasepasswordchange.cpp  databasepasswordchange.h  databasepasswordchange.ui  databasesconnections.cpp  databasesconnections.h  databasesconnections.ui  (+396 more)
Restaurant/: Restaurant (1).pro  Restaurant.am.ts  Restaurant.pro  baseextendeddialog.cpp  baseextendeddialog.h  dishestable.cpp  dishestable.h  dlgbanket.cpp  dlgbanket.h  dlgbanket.ui  dlgbanketitems.cpp  dlgbanketitems.h  dlgbanketitems.ui  dlgbreakfast.cpp  dlgbreakfast.h  dlgcomplexdish.cpp  dlgcomplexdish.h  dlgcomplexdish.ui  dlgconnecttoserver.cpp  dlgconnecttoserver.ui  dlgdate.cpp  dlgdate.h  dlggettext.cpp  dlggettext.h  dlggettext.ui  dlglist.cpp  dlglist.ui  dlgonebreakfasat.cpp  dlgonebreakfasat.h  dlgonebreakfasat.ui  dlgorders.cpp  dlgorders.ui  dlgprinttax.cpp  dlgprinttax.h  dlgprinttax.ui  dlgreservation.cpp  dlgreservation.h  (+51 more)
Restaurant2/: CMakeLists.txt  Restaurant (1).pro  Restaurant.am (1).qm  Restaurant.am (1).ts  Restaurant.am.qm  Restaurant.am.ts  Restaurant.pro  Restaurant.pro.user.3cb35f3  Restaurant.pro.user.5d6e691.4.10-pre1  Restaurant.pro.user.b56fefc  Restaurant.pro.user.fa786cc.4.8-pre1  Restaurant.pro.user.fb4f21e  baseextendeddialog.cpp  baseextendeddialog.h  branchstoremap.cpp  branchstoremap.h  c5printing.cpp  checktime.cpp  checktime.h  css  dishestable.cpp  dishestable.h  dlgbanket.cpp  dlgbanket.h  dlgbanket.ui  dlgbreakfast.cpp  dlgbreakfast.ui  dlgcalc.cpp  dlgcalc.h  dlgcalc.ui  dlgcarselection (1).cpp  dlgcarselection (1).h  dlgcarselection (1).ui  dlgcarselection.cpp  dlgcarselection.h  dlgcarselection.ui  dlgcheckcard.cpp  dlgcheckcard.h  dlgcheckcard.ui  dlgcomplexdish.cpp  (+109 more)
(+944 files in other folders)
